# camera-calibration-uv

./: .gitignore  LICENSE  README.md  pyproject.toml
example_boards/: charuco_10x13.yaml  charuco_3x10.yaml  charuco_3x5_a1.yaml  charuco_3x5_a1_extr.yaml  charuco_5x7.yaml  charuco_5x7_A0.yaml  charuco_5x7_A4.yaml  charuco_6x9.yaml  charuco_6x9_A2.yaml
output/: intrinsics.json
src/camera_calibration_uv/: __init__.py  board.py  calibrate_intrinsic.py  capture_video.py  charuco_utils.py  intrinsic.py  print_board.py  utils.py
tools/: capture_video.py  main.py
