[project]
name = "camera-calibration-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon Thimm", email = "2023463@stud.hs-mannheim.de" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyyaml>=6.0.2",
]

[project.scripts]
calibrate = "camera_calibration_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
